RESOLVED FIXED182349
Occasional null deref under WebPageProxy::updateBackingStoreDiscardableState()
https://bugs.webkit.org/show_bug.cgi?id=182349
Summary Occasional null deref under WebPageProxy::updateBackingStoreDiscardableState()
Tim Horton
Reported 2018-01-31 13:36:52 PST
Occasional null deref under WebPageProxy::updateBackingStoreDiscardableState()
Attachments
Patch (1.44 KB, patch)
2018-01-31 13:37 PST, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2018-01-31 13:37:08 PST
Tim Horton
Comment 2 2018-01-31 13:40:44 PST
Radar WebKit Bug Importer
Comment 3 2018-01-31 13:41:22 PST
Tim Horton
Comment 4 2018-01-31 13:44:19 PST
Note You need to log in before you can comment on or make changes to this bug.