Occasional null deref under WebPageProxy::updateBackingStoreDiscardableState() https://bugs.webkit.org/show_bug.cgi?id=182349 <rdar://problem/27822258>

Reviewed by Simon Fraser.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::updateBackingStoreDiscardableState):
m_drawingArea can be null during process launch and relaunch.

Cocoa ports don't use the result of setBackingStoreIsDiscardable(),
but they do run this code to keep it up to date.


Canonical link: https://commits.webkit.org/198151@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227927 268f45cc-cd09-0410-ab3c-d52691b4dbfc