Source/WebKit/UIProcess/WebPageProxy.cpp
@@ -6286,6 +6286,9 @@ void WebPageProxy::updateBackingStoreDiscardableState()
 {
     ASSERT(isValid());
 
+    if (!m_drawingArea)
+        return;
+
     bool isDiscardable;
 
     if (!m_process->isResponsive())
